# wm3000ud

./: 0001-extension.patch  CMakeLists.txt  Makefile  cmdinterpret.cpp  cmdinterpret.h  cmds.cpp  crcutils.cpp  crcutils.h  gaussmatrix.cpp  gaussmatrix.h  i2ceeprom.cpp  i2ceeprom.h  i2cutils.cpp  i2cutils.h  intelhexfileio.cpp  intelhexfileio.h  jdata.xml  justdata.cpp  justdata.h  justdatabase.cpp  justdatabase.h  justdatav215.cpp  justdatav215.h  main.cpp  parse.cpp  parse.h  scpi.cpp  scpi.h  wm3000ud.cpp  wm3000ud.h  wm3000ud.pro  wmjustdata.cpp  wmjustdata.h  wmjustdatabase.h  wmjustdatav215.cpp  wmjustdatav215.h  wmscpi.h  wmuglobal.h  zhserver.cpp  zhserver.h
.github/workflows/: buildAndTest.yml
